Basic Landing Page

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -10,6 +10,15 @@ body {
   padding-top: 50px;
 }
 .rezoome {
-  padding: 40px 15px;
+  padding: 40px 0;
+  .btn-group-vertical {
+    button {
+      text-align: left;
+      border: 1px solid;
+    }
+  }
+}
+.center-text {
+  text-align: center;
 }
 
