wresume search screen

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -17,6 +17,47 @@ body {
       border: 1px solid;
     }
   }
+  .search_container {
+    text-align: center;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    margin: 0 20px;
+    padding: 0 0 8px 0;
+    form {
+      input {
+        margin-left: 2em;
+      }
+      .input-group.radius, .input-group.zip {
+       margin-top: -34px;
+      }
+      .input-group.radius {
+        margin-right: 2em;
+      }
+      input#zip {
+        width: 6em;
+      }
+      input#radius {
+        width: 9em;
+      }
+      span.input-group-addon{
+        width: 2em;
+      }
+      input#primary_email {
+        width: 14em;
+      }
+      input#last_name, input#first_name {
+        width: 9em;
+      }
+      input#state {
+        width: 4em;
+      }
+      textarea {
+      }
+      .second_row, .third_row {
+        margin-top: 1em;
+      }
+    }
+  }
 }
 .center-text {
   text-align: center;
