--- a/ember/app/templates/resumes/show.hbs
+++ b/ember/app/templates/resumes/show.hbs
@@ -1,1 +1,18 @@
-<h4>{{model.lastName}}</h4>
+<h4>
+  {{model.firstName}}
+  {{model.lastName}}
+</h4>
+<ul>
+  <li>
+    {{model.primary_email}}
+  </li>
+  <li>
+    {{model.city}}
+  </li>
+  <li>
+    {{model.state}}
+  </li>
+  <li>
+    {{model.zip}}
+  </li>
+</ul>
