--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -17,6 +17,11 @@ body {
       border: 1px solid;
     }
   }
+  .resume_list {
+    ul {
+      list-style-type: none;
+    }
+  }
 }
 .center-text {
   text-align: center;
