Attempt to use outlet unsuccessfully

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -18,8 +18,14 @@ body {
     }
   }
   .resume_list {
-    ul {
-      list-style-type: none;
+    max-height: 100px;
+    overflow-y: auto;
+    .btn {
+      width: 100%;
+      border: 1px solid;
+    }
+    a {
+      color: white;
     }
   }
 }
