--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -28,6 +28,9 @@ body {
       color: white;
     }
   }
+  .resume_text {
+    border: 1px solid;
+  }
   h4.resume {
     text-align: center;
   }
