--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -27,14 +27,20 @@ body {
       input {
         margin-left: 2em;
       }
-      .input-group.radius, .input-group.zip {
+      .input-group.zip, #primary_email, #last_name, #first_name, #state {
        margin-top: -34px;
       }
       .input-group.radius {
         margin-right: 2em;
       }
-      input#zip {
-        width: 6em;
+      .radius.help-block {
+        text-align: left;
+        margin-left: 2em;
+        color: @gray;
+      }
+      input#location {
+        width: 19em;
+        margin-right: 2em;
       }
       input#radius {
         width: 9em;
