pluralize helper exists, yay!

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -66,6 +66,7 @@ body {
   }
   .resume_list {
     max-height: 100px;
+    margin-left: -15px;
     overflow-y: auto;
     .btn {
       width: 100%;
