change download name and start email button

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -17,6 +17,23 @@ body {
       border: 1px solid;
     }
   }
+  .emailer {
+    form.form-inline {
+      .input-group.email_subject, .input-group.email_body {
+        margin-left: 1em;
+      }
+      .input-group.email_to {
+        width: 8em;
+      }
+      .input-group.email_body {
+        width: 15em;
+      }
+      a {
+        margin-left: 1em;
+      }
+    }
+    margin-bottom: 1em;
+  }
   .search_container {
     text-align: center;
     border-top: 1px solid;
