add loading template

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -1,4 +1,5 @@
 @import 'bootstrap';
+@import 'littlebar';
 .navbar-inverse {
   .navbar-header {
     a.navbar-brand.rezoome_header {
@@ -8,6 +9,15 @@
 }
 body {
   padding-top: 50px;
+  .waiting {
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+    .waiting-container {
+      display: inline-block;
+      margin: 0 auto;
+    }
+  }
 }
 .rezoome {
   padding: 40px 0;
