--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -125,6 +125,14 @@ body {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  h4 {
+    position: relative;
+    top: 5px;
+  }
+  pre {
+    height: 400px;
+    overflow-y: scroll;
+  }
 }
 
 /* Declare heights because of positioning of img element */
