remove a few deprecations

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -92,6 +92,9 @@ body {
       .second_row, .third_row {
         margin-top: 1em;
       }
+      .reset {
+        margin-left: 1em;
+      }
     }
   }
   .resume_list {
