add google maps

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -101,7 +101,7 @@ body {
     }
   }
   .resume_list {
-    max-height: 100px;
+    max-height: 300px;
     margin-left: -15px;
     overflow-y: auto;
     .btn {
@@ -121,6 +121,10 @@ body {
 }
 .center-text {
   text-align: center;
+}
+.map-canvas {
+  width: 500px;
+  height: 300px;
 }
 
 /* CUSTOMIZE THE CAROUSEL
