fix issues in google map

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -104,6 +104,7 @@ body {
     max-height: 300px;
     margin-left: -15px;
     overflow-y: auto;
+    overflow-x: hidden;
     .btn {
       width: 100%;
       border: 1px solid;
