adding resume works, but not deleting

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -127,6 +127,32 @@ body {
   width: 500px;
   height: 300px;
 }
+.file-uploader {
+ .btn;
+ .btn-info;
+ .btn-sm;
+}
+.btn-file-uploader {
+ position: relative;
+ text-align: center;
+ overflow: hidden;
+}
+.btn-file-uploader input[type="file"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
