move flash message to fixed position

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -23,7 +23,10 @@ body {
   }
 }
 #flash {
-  padding-top: 40px;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  top: 80px;
 }
 .rezoome {
   padding: 40px 0;
