switch notes to a textarea

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -21,6 +21,11 @@ body {
   z-index: 1000;
   top: 80px;
 }
+.form-inline .notes {
+  textarea.form-control  {
+    width: 603px;
+  }
+}
 .rezoome {
   padding: 40px 0;
   .btn-group-vertical {
