push second search row down

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -57,6 +57,9 @@ body {
     border-bottom: 1px solid;
     margin: 0 20px;
     padding: 0 0 8px 0;
+    .row.name_and_position {
+      margin-top: 2em;
+    }
     form {
       input {
         margin-left: 2em;
