--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -64,7 +64,7 @@ body {
       input {
         margin-left: 2em;
       }
-      .input-group.zip, #primary_email, #last_name, #first_name, #state {
+      .input-group.zip, #primary_email, #last_name, #first_name, #state, #position {
        margin-top: -34px;
       }
       .radius.help-block {
