fix styling on search pulldown and issue on setting position

--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -61,10 +61,10 @@ body {
       margin-top: 2em;
     }
     form {
-      input {
+      input, select {
         margin-left: 2em;
       }
-      .input-group.zip, #primary_email, #last_name, #first_name, #state, #position {
+      .input-group.zip, #primary_email, #last_name, #first_name, #state, .input-group.position {
        margin-top: -34px;
       }
       .radius.help-block {
