--- a/ember/app/styles/app.less
+++ b/ember/app/styles/app.less
@@ -64,8 +64,11 @@ body {
       input, select {
         margin-left: 2em;
       }
-      .input-group.zip, #primary_email, #last_name, #first_name, #state, .input-group.position {
+      .input-group.zip, #primary_email, #last_name, #first_name, #state {
        margin-top: -34px;
+      }
+      .input-group.position {
+        margin-top: -16px;
       }
       .radius.help-block {
         text-align: left;
